--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -42,15 +42,28 @@ layout: default
       <!-- Google AdSense 스크립트 추가 -->
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 
-      <!-- AdSense 단일 광고 슬롯 -->
-      <div id="single-ad-slot">
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="4202989029"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+      <!-- 두 개의 광고 슬롯을 나란히 배치 -->
+      <div id="ads-container">
+        <div class="ad-slot">
+          <!-- 광고 슬롯 1 -->
+          <ins class="adsbygoogle"
+               style="display:block; width: 100%; height: auto;"
+               data-ad-client="ca-pub-9374368296307755"
+               data-ad-slot="4202989029"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </div>
+        <div class="ad-slot">
+          <!-- 광고 슬롯 2 -->
+          <ins class="adsbygoogle"
+               style="display:block; width: 100%; height: auto;"
+               data-ad-client="ca-pub-9374368296307755"
+               data-ad-slot="3603389079"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </div>
       </div>
 
       <section class="page__content" itemprop="text">
@@ -89,3 +102,15 @@ layout: default
     {% include page__related.html posts=site.posts %}
   {% endif %}
 </div>
+
+<style>
+  /* 두 개의 광고 슬롯을 가로로 배치하고, 각 슬롯의 가로 너비를 절반으로 조정 */
+  #ads-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  .ad-slot {
+    width: 48%; /* 각 광고 슬롯의 너비를 50%로 설정 */
+  }
+</style>
