--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -40,41 +40,32 @@ layout: default
       {% endunless %}
 
       <!-- Google AdSense 스크립트 추가 -->
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-      <!-- 상단 광고 영역 - 두 개의 광고 슬롯을 나란히 배치하고 지연 로드 -->
+      <!-- 상단 광고 영역 - 광고 슬롯 1과 2 -->
       <div id="top-ad-container">
-        <div class="ad-slot" id="ad-slot-1">
-          <!-- 광고 슬롯 1 -->
-          <ins class="adsbygoogle"
-               style="display:block; width:100%; height:auto;"
-               data-ad-client="ca-pub-9374368296307755"
-               data-ad-slot="4202989029"
-               data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-        </div>
-        <div class="ad-slot" id="ad-slot-2" style="display:none;">
-          <!-- 광고 슬롯 2 -->
-          <ins class="adsbygoogle"
-               style="display:block; width:100%; height:auto;"
-               data-ad-client="ca-pub-9374368296307755"
-               data-ad-slot="3603389079"
-               data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-        </div>
-      </div>
-
-      <script>
-        // 페이지가 로드된 후 첫 번째 광고를 표시하고, 1초 후 두 번째 광고를 로드
-        window.addEventListener('load', function() {
+        <!-- 상단 광고 슬롯 1 -->
+        <ins class="adsbygoogle post-top-first"
+             style="display:inline-block; width:100%; max-width:336px; height:auto;"
+             data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+             data-ad-slot="OOOOOOOOOO"
+             data-ad-format="rectangle"
+             data-full-width-responsive="true"></ins>
+        <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
 
-          setTimeout(function() {
-            document.getElementById('ad-slot-2').style.display = 'block';
-            (adsbygoogle = window.adsbygoogle || []).push({});
-          }, 1000); // 1초 후 두 번째 광고 로드
-        });
-      </script>
+        <!-- 상단 광고 슬롯 2 -->
+        <ins class="adsbygoogle post-top-second"
+             style="display:inline-block; width:100%; max-width:336px; height:auto;"
+             data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+             data-ad-slot="OOOOOOOOOO"
+             data-ad-format="rectangle"
+             data-full-width-responsive="true"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
 
       <section class="page__content" itemprop="text">
         {% if page.toc %}
@@ -121,7 +112,7 @@ layout: default
     gap: 20px;
     margin-bottom: 20px;
   }
-  .ad-slot {
+  .post-top-first, .post-top-second {
     width: 48%; /* 각 광고 슬롯의 너비를 화면의 절반으로 설정 */
   }
 </style>
