--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -47,8 +47,8 @@ layout: default
         <!-- 상단 광고 슬롯 1 -->
         <ins class="adsbygoogle post-top-first"
              style="display:inline-block; width:100%; max-width:336px; height:auto;"
-             data-ad-client="ca-pub-9374368296307755" <!-- 여기에 사용자 지정된 코드 입력 -->
-             data-ad-slot="4202989029" <!-- 여기에 사용자 지정된 슬롯 번호 입력 -->
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="4202989029"
              data-ad-format="rectangle"
              data-full-width-responsive="true"></ins>
         <script>
@@ -58,8 +58,8 @@ layout: default
         <!-- 상단 광고 슬롯 2 -->
         <ins class="adsbygoogle post-top-second"
              style="display:inline-block; width:100%; max-width:336px; height:auto;"
-             data-ad-client="ca-pub-9374368296307755" <!-- 여기에 사용자 지정된 코드 입력 -->
-             data-ad-slot="3603389079" <!-- 여기에 사용자 지정된 슬롯 번호 입력 -->
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="3603389079"
              data-ad-format="rectangle"
              data-full-width-responsive="true"></ins>
         <script>
