--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
                style="display:block"
                data-ad-client="ca-pub-9374368296307755"
                data-ad-slot="3603389079"
-               data-ad-format="auto"></ins>
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
           <script>
                (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
@@ -37,7 +38,8 @@
                style="display:block"
                data-ad-client="ca-pub-9374368296307755"
                data-ad-slot="9952845435"
-               data-ad-format="auto"></ins>
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
           <script>
                (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
@@ -65,14 +67,23 @@
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Sidebar Ad Unit -->
       <ins class="adsbygoogle"
-           style="display:block"
+           style="display:block; max-width: 300px; max-height: 600px;"
            data-ad-client="ca-pub-9374368296307755"
            data-ad-slot="4202989029"
-           data-ad-format="auto"></ins>
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
       <script>
            (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
     </aside>
+
+    <style>
+    .sidebar-ad {
+      width: 300px; /* 사이드바 너비에 맞춤 */
+      max-height: 600px; /* 사이드바에 맞는 최대 높이 설정 */
+      overflow: hidden; /* 광고가 영역을 넘지 않도록 설정 */
+    }
+    </style>
 
     <!-- 하단 광고 -->
     <div id="footer" class="page__footer">
@@ -87,7 +98,8 @@
                style="display:block"
                data-ad-client="ca-pub-9374368296307755"
                data-ad-slot="1724698171"
-               data-ad-format="auto"></ins>
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
           <script>
                (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
