--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -21,6 +21,22 @@ layout: default
 <div id="main" role="main">
   {% include sidebar.html %}
 
+  <!-- 본문 상단 광고 (반응형) -->
+  <div class="ad-container">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+         crossorigin="anonymous"></script>
+    <!-- 본문 상단 광고 유동적 크기 -->
+    <ins class="adsbygoogle"
+         style="display:block; width: 100%; max-width: 728px; height: auto;"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="1966797795"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | replace: '|', '&#124;' | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
